[package]
name = "rustts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.162"
#tokio = { version = "1.28.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }

sycamore = { version = "0.8.2", features = ["sycamore-futures", "suspense"] }
# used to access the current javascript document and get things like the URL of the page
web-sys = { version = "0.3.63", features = ["Document", "Element", "Node", "HtmlSelectElement"] }
